# TP-Integrador-IDS

./: .dockerignore  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yaml  init.sh  inventario.py  main.py  prestamos.py  pyproject.toml  salud.py  template.env
app_backend/: .dockerignore  Dockerfile  README.md  app.py  config.py  database.py  http_codes_and_messages.py  paginacion.py  penalties.py  pyproject.toml  swagger.yaml  usuarios.py  utils.py  validators.py
app_backend/db_scripts/: create_seeds.sql  init_db.sql
app_backend/routes/: __init__.py  articulos_route.py  auth_route.py  items_route.py  loans_route.py  normativas.py  normativas_route.py  penalizaciones_route.py  penalties_route.py  ping.py  qr_route.py  reportes.py  reportes_route.py  reservas_route.py  salud_route.py  users_routes.py  usuarios_route.py  usuarios_routes.py
app_backend/routes/auth/: logout.py
app_backend/utiles/: autenticacion.py  formateadores.py  qr.py  servicios.py
app_backend/utils/: __init__.py  opciones_articulo.py
app_frontend/: .dockerignore  .prettierignore  .prettierrc  Dockerfile  README.md  app.py  config.py  http_codes_and_messages.py  package.json  pnpm-lock.yaml  pyproject.toml
app_frontend/routes/: __init__.py  admin_routes.py  alumno_routes.py  biblio_routes.py  catalogo.py  profesor_routes.py  public_routes.py
app_frontend/services/: __init__.py  api_client.py  auth_service.py  items_service.py  loans_service.py  normativas_service.py  penalties_service.py  qr_service.py  reports_service.py  user_service.py
app_frontend/servicios/: __init__.py  api_client.py  articulos_servicio.py  auth_servicio.py  fechas_servicio.py  historial_filtros_servicio.py  normativas_servicio.py  paginacion_servicio.py  penalizaciones_servicio.py  reports_servicio.py  reservas_servicio.py  usuario_servicio.py
app_frontend/static/css/: style.css
app_frontend/static/images/: photo-1524995997946-a1c2e315a42f.avif
app_frontend/static/js/: main.js  scanner-automatico.js
app_frontend/templates/: 404.html  500.html  admin_prestamo_detalle.html  alumno_comprobante.html  alumno_historial.html  alumno_perfil.html  base.html  base_dashboard.html  index.html  profesor_dashboard.html
app_frontend/templates/admin/: _admin_nav_cards.html  articulos.html  articulos_form.html  dashboard.html  editar_articulo.html  morosidad.html  normativas.html  opciones_carreras.html  penalizaciones.html  penalizaciones_form.html  perfil_usuario.html  prestamo_detalle.html  prestamos.html  reportes.html  reserva_detalle_admin.html  reservas.html  usuarios.html
app_frontend/templates/alumno/: comprobante.html  dashboard.html  historial.html  mis-reservas.html  nueva_reserva.html  penalizaciones.html  perfil.html  prestamo_detalle_alumno.html  reserva_detalle_alumno.html
app_frontend/templates/biblioteca/: escanear_qr.html  solicitudes_reservas.html
app_frontend/templates/componentes/: auth-card.html
app_frontend/templates/layouts/: base.html  base_dashboard.html
(+17 files in other folders)
