[project]
name = "tp-integrador-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
  "bcrypt>=5.0.0",
  "flask>=3.1.3",
  "flask-swagger-ui>=3.0.3",
  "mysql-connector-python>=9.7.0",
  "pyjwt>=2.13.0",
  "python-dotenv>=1.2.2",
  "qrcode[pil]>=8.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "PL", "D"]

ignore = ["D203", "D213", "D205", "PLR0911", "PLR0912"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
