[project]
name = "tp-integrador-frontend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = ["Flask==3.1.3", "python-dotenv==1.2.2", "requests==2.32.5"]

[tool.ruff]
# Set the maximum line length to 88 (standard Black format)
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), isort (I), and Pylint (PL)
select = ["F", "E", "W", "I", "PL", "D"]

# Ignore specific rules if they get too noisy (e.g., missing docstrings)
ignore = ["D203", "D213"]

[tool.ruff.format]
# Use single quotes for non-docstrings if you prefer, otherwise defaults to double
quote-style = "double"
# Indent with spaces
indent-style = "space"
