[project]
name = "tp-integrador-frontend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = ["Flask==3.1.3", "python-dotenv==1.2.2", "requests==2.32.5"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "PL", "D"]

ignore = ["D203", "D213", "D205"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
